Changelog
=========


2.0 (unreleased)
----------------

- Add portlet settings support for Plone 4.
  [jone]

- Implement better blob file detection (ftw.file support).
  [jone]

- Fix setting files / blobs: the decoder (f.p.receiver) takes care of the value.
  [jone]

- Support for transporting datetime objects.
  [jone]

- Improve marker interface adapter.
  Do not remove / readd all interfaces, but only apply differences.
  [jone]

- Drop Plone 3 support.
  [jone]


1.2 (2011-04-06)
----------------

- Cleanup, move to github (https://github.com/4teamwork/ftw.publisher.core) and
  prepare for release.
  [jone]


1.1 (2010-09-27)
----------------

- Removed archetypes.schemaextender, since we can use obj.Schema() for getting
  all the fields
  [jone]

- Added new warning states
  [jone]


1.0c4 (2010-07-21)
------------------

- Added translations for the states
  [jone]


1.0c3 (2010-06-24)
------------------

- Removed encoding stuff for portlets, that now should be done be the
  better encoding / decoding.
  [jone]

- Added string encoding / decoding methods which work with json
  [jone]


1.0c2 (2010-06-22)
------------------

- Fixed namespace_packages in setup.py
  [jone]

- Added Backreference adapter
  [jone]

- Make portlet adapter more save
  [jone]

- added new states for renaming purposes
  [mathias.leimgruber]

- fixed binary conversion to base64 string
  [mathias.leimgruber, victor.baumann]

- added test cases for portlet adapter and properties adapter
  [mathias.leimgruber]

- added an afterpushEvent
  [mathias.leimgruber]

- Extend publish process with adapters
  [mathias.leimgruber]

- sync context portlet
  [mathias.leimgruber]

- sync interfaces
  [mathias.leimgruber]

- sync topic criterias
  [mathias.leimgruber]

- concept/structure
  [jone]

- Working initial release
  [jone]